[UI] Header overflow trigger bug fix
Fixed the alignment issue when the header-overflow-trigger is directly after the .header-nav or the .branding

--- a/src/clarity-angular/nav/_responsive-nav.clarity.scss
+++ b/src/clarity-angular/nav/_responsive-nav.clarity.scss
@@ -292,6 +292,11 @@ $clr-transition-style: ease;
                         display: none;
                     }
                 }
+
+                .branding + .header-overflow-trigger,
+                .header-nav + .header-overflow-trigger {
+                    margin-left: auto;
+                }
             }
         }
 
